[package]
name = "aya-log"
version = "0.1.1"
description = "A logging library for eBPF programs."
keywords = ["ebpf", "bpf", "log", "logging"]
license = "MIT OR Apache-2.0"
authors = ["The Aya Contributors"]
repository = "https://github.com/aya-rs/aya-log"
readme = "README.md"
documentation = "https://docs.rs/aya-log"
edition = "2018"

[dependencies]
aya = { git = "https://github.com/vadorovsky/aya", branch = "args-mut-ptr", features=["async_tokio"] }
aya-log-common = { version = "0.1", path = "../aya-log-common", features=["userspace"] }
thiserror = "1"
log = "0.4"
bytes = "1.1"
tokio = { version = "1.2.0" }

[lib]
path = "src/lib.rs"
